--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <section id="sobre">
-        <img src="./img/">
+        <img src="./img/101291937.png">
         <div>
             <h2>Sobre mim</h2>
             <p>Eu sou um Programador Front End, tenho experiência e conhecimento criando aplicações com HTML, CSS,
@@ -46,24 +46,24 @@
         <div class="card-projetos">
 
             <div class="card">
-                <img src="./img/netflix.png">
-                <h5>Netflix</h5>
+                <img src="./img/OIP.jfif">
+                <h5>Projeto Quiz Em React-Js</h5>
                 <p></p>
-                <a href="https://peaceful-starlight-02739b.netlify.app/" target="_blank">Ver Projeto</a>
+                <a href="https://github.com/ramonchuinca/QUIZ-REACT-JS" target="_blank">Ver Projeto</a>
             </div>
 
             <div class="card">
-                <img src="./img/starbucks.png">
-                <h5>Starbucks</h5>
+                <img src="./img/">
+                <h5></h5>
                 <p></p>
-                <a href="https://starbucks-rodolfo.netlify.app/" target="_blank">Ver Projeto</a>
+                <a href="" target="_blank">Ver Projeto</a>
             </div>
 
             <div class="card">
-                <img src="./img/crono.png">
-                <h5>Cronometro</h5>
+                <img src="./img/">
+                <h5></h5>
                 <p></p>
-                <a href="https://cronometro-mpdz.netlify.app/" target="_blank">Ver Projeto</a>
+                <a href="" target="_blank">Ver Projeto</a>
             </div>
 
         </div>
