--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <h2 class="portfolio">Portfo<span>lio</span></h2>
             <ul>
-                <li><a class="link-menu" href="#home">Home</a></li>
+                <li><a class="link-menu" href="#home">Ho<span>me</span></a></li>
                 <li><a class="link-menu" href="#sobre">Sobre</a></li>
                 <li><a class="link-menu" href="#projetos-id">Projetos</a></li>
                 <li><a class="link-menu" href="#fale-comigo">Fale comigo</a></li>
@@ -26,7 +26,7 @@
 
         <div class="meu-nome">
             <h1>Ramon <span>Chuinca</span></h1>
-            <h3>Programador Front End</h3>
+            <h3>Programador <span>Front-End</span></h3>
         </div>
     </div>
 
@@ -34,8 +34,12 @@
         <img src="./img/101291937.png">
         <div>
             <h2>Sobre mim</h2>
-            <p>Eu sou um Programador Front End, tenho experiência e conhecimento criando aplicações com HTML, CSS,
-                JavaScript, React, Angular, e Vue-Js.</p>
+            <p>
+            Olá me chamo Ramon sou Desenvolvedor Front-End Estou em busca de uma vaga no mercado Desde que me interessei na área da programação, estudo diariamente para conseguir a minha oportunidade. 
+            Há 3 anos venho praticando e colocando em pratica todo meu aprendizado e conhecimento que venho obtendo diariamente 
+            ao longo desse meu caminho sobre a programação e tenho a certeza que estou pronto para somar na sua equipe de programadores. 
+            Tenho facilidade de aprendizado, boa comunicação e a todo momento busco me aprimorar cada vez mais
+            </p>
             <button>Entre em contato</button>
         </div>
     </section>
@@ -78,8 +82,12 @@
                 <img src="./img/linkedin.png">
             </a>
 
-            <a href="tel:+55">
+            <a href="tel:+556999370-2152">
                 <img src="./img/telefone.png">
+            </a>
+
+            <a href="https://github.com/ramonchuinca" target="_blank">
+                <img src="./img/GitHub2.png">
             </a>
         </div>
 
