--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
             <div class="col-lg-6">
               <h2 class="mb-4">Sobre mim</h2>
               <p class="text-left pr-lg-5">
-                Olá, meu nome é Ramon e sou Desenvolvedor Front-End. Estou em busca de uma vaga no mercado.
-                Desde que me interessei pela área da programação, tenho estudado diariamente para conseguir
-                a minha oportunidade. Ao longo dos últimos 3 anos, tenho praticado e colocado em prática todo
-                o meu aprendizado e conhecimento sobre programação. Estou confiante de que estou pronto para somar
-                à sua equipe de programadores. Tenho facilidade de aprendizado, boa comunicação
-                e estou sempre em busca de me aprimorar.
+                Olá, sou Ramon, um Desenvolvedor Front-End apaixonado em busca de uma nova oportunidade no mercado. Desde o meu primeiro contato com a programação,
+                tenho dedicado tempo e esforço diários para aprimorar minhas habilidades. Nos últimos 3 anos, tenho mergulhado profundamente no mundo do desenvolvimento web,
+                colocando em prática todo o conhecimento adquirido.
+                Estou confiante de que estou pronto para contribuir significativamente para a sua equipe de programadores. Sou um aprendiz ávido, sempre buscando novos desafios para expandir meu conjunto de habilidades. Além disso, considero a comunicação uma parte essencial do trabalho em equipe e estou constantemente aprimorando minhas habilidades nessa área.
+                Estou entusiasmado com a possibilidade de colaborar com vocês e contribuir para o sucesso do seu projeto. Obrigado pela consideração.
               </p>
             </div>
           </div>
@@ -76,8 +75,8 @@
               <div class="card">
                 <img src="./img/OIP.jfif" class="card-img-top" alt="Imagem do Projeto Quiz em React-JS">
                 <div class="card-body">
-                  <h5 class="card-title">Projeto Quiz Em React-Js</h5>
-                  <a href="https://github.com/ramonchuinca/QUIZ-REACT-JS" class="btn btn-primary" target="_blank">Ver Projeto</a>
+                  <h5 class="card-title">Projeto Land-Page de agendamento de Consutas</h5>
+                  <a href="https://ramonchuinca.github.io/trabalho_faculdade_land_page-/" class="btn btn-primary" target="_blank">Ver Projeto</a>
                 </div>
               </div>
             </div>
