--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="row">
             <div class="col-lg-4 mb-4">
               <div class="card">
-                <img src="./img/OIP.jfif" class="card-img-top" alt="Imagem do Projeto Quiz em React-JS">
+                <img src="" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">Projeto Land-Page de agendamento de Consutas</h5>
                   <a href="https://ramonchuinca.github.io/trabalho_faculdade_land_page-/" class="btn btn-primary" target="_blank">Ver Projeto</a>
