--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <!-- Novo Card -->
             <div class="col-lg-4 mb-4">
               <div class="card">
-                <img src="./img/novo_projeto.jpg" class="card-img-top" alt="Imagem do Novo Projeto">
+                <img src="./img/OIP.jfif" class="card-img-top" alt="Imagem do Novo Projeto">
                 <div class="card-body">
-                  <h5 class="card-title">Novo Projeto</h5>
-                  <a href="#" class="btn btn-primary" target="_blank">Ver Projeto</a>
+                  <h5 class="card-title">Tema Sobre a Natureza</h5>
+                  <a href="https://ramonchuinca.github.io/Tema-Natureza/" class="btn btn-primary" target="_blank">Ver Projeto</a>
                 </div>
               </div>
             </div>
