--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap"
-      rel="stylesheet"
-    />
-
+      rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
 
-
-    <title>PortFolio</title>
+<title>PortFolio</title>
   </head>
 
   <body>
@@ -75,7 +72,7 @@
               <div class="card">
                 <img src="./img/2.jpeg" class="card-img-top" alt="Projeto Land-Page de agendamento de Consutas Feitas com as liguagens acima">
                 <div class="card-body">
-                  <h5 class="card-title">Projeto Land-Page de agendamento de Consutas</h5>
+                  <h5 class="card-title">Landing-pages com um formulario de agendamento de consuta</h5>
                   <a href="https://ramonchuinca.github.io/trabalho_faculdade_land_page-/" class="btn btn-primary" target="_blank">Ver Projeto</a>
                 </div>
               </div>
@@ -85,8 +82,8 @@
               <div class="card">
                 <img src="./img/novo_projeto.jpg" class="card-img-top" alt="Imagem do Novo Projeto">
                 <div class="card-body">
-                  <h5 class="card-title">Novo Projeto</h5>
-                  <a href="#" class="btn btn-primary" target="_blank">Ver Projeto</a>
+                  <h5 class="card-title">Landing-pages com um formulario de agendamento de consuta</h5>
+                  <a href="https://ramonchuinca.github.io/trabalho_faculdade_land_page-/" class="btn btn-primary" target="_blank">Ver Projeto</a>
                 </div>
               </div>
             </div>
