--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
               <div class="card">
                 <img src="./img/OIP.jfif" class="card-img-top" alt="Imagem do Novo Projeto">
                 <div class="card-body">
-                  <h5 class="card-title">Novo Projeto</h5>
-                  <a href="#" class="btn btn-primary" target="_blank">Ver Projeto</a>
+                  <h5 class="card-title">Projeto Sobre o Tema da Natureza</h5>
+                  <a href="https://ramonchuinca.github.io/Tema-Natureza/" class="btn btn-primary" target="_blank">Ver Projeto</a>
                 </div>
               </div>
             </div>
