--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap"
-      rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap"rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -63,16 +61,18 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-6">
-              <img src="./img/101291937.png" class="img-fluid" alt="Foto de Ramon Chuinca">
+              <img src="./img/101291937.png" class="img-fluid" alt="Foto Chuinca">
             </div>
             <div class="col-lg-6">
               <h2 class="mb-4">Sobre mim</h2>
               <p class="text-left pr-lg-5">
-                Olá, sou Ramon, um Desenvolvedor Front-End apaixonado em busca de uma nova oportunidade no mercado. Desde o meu primeiro contato com a programação,
-                tenho dedicado tempo e esforço diários para aprimorar minhas habilidades. Nos últimos 3 anos, tenho mergulhado profundamente no mundo do desenvolvimento web,
-                colocando em prática todo o conhecimento adquirido.
-                Estou confiante de que estou pronto para contribuir significativamente para a sua equipe de programadores. Sou um aprendiz ávido, sempre buscando novos desafios para expandir meu conjunto de habilidades. Além disso, considero a comunicação uma parte essencial do trabalho em equipe e estou constantemente aprimorando minhas habilidades nessa área.
-                Estou entusiasmado com a possibilidade de colaborar com vocês e contribuir para o sucesso do seu projeto. Obrigado pela consideração.
+                Olá, me chamo Ramon, Sou um Desenvolvedor Front-End com mais de um ano de experiência com conhecimentos solidos em <span class="custom-color"> HTML, CSS, JavaScript, PHP, Laravel e Vue.js.</span> 
+                Desde que comecei minha jornada na programação, tenho me dedicado intensamente ao aprimoramento de minhas habilidades, aplicando-as diretamente em projetos reais e contribuindo 
+                para o desenvolvimento de soluções web dinâmicas e eficientes.
+                Ao longo dos últimos anos, trabalhei em projetos que exigiram não apenas domínio técnico, mas também a capacidade de colaborar efetivamente com equipes multifuncionais.
+                Sou um entusiasta por aprender novas tecnologias e estou sempre em busca de desafios que expandam meu conhecimento e fortaleçam minha atuação.
+                Estou confiante de que minha experiência, combinada com minha paixão por desenvolvimento web e a habilidade de comunicação, me permite contribuir de forma significativa para sua equipe
+                de programadores. Agradeço pela consideração e estou animado com a oportunidade de colaborar em seus projetos.
               </p>
             </div>
           </div>
@@ -84,28 +84,28 @@
           <h2 class="text-center mb-5">Principais <span>Projetos</span></h2>
           <div class="row">
             <div class="col-lg-4 mb-4">
-              <div class="card">
+              <div class="card-custom">
                 <img src="./img/2.jpeg" class="card-img-top" alt="Projeto Land-Page de agendamento de Consutas Feitas com as liguagens acima">
                 <div class="card-body">
-                  <h5 class="card-title">Landing-page de agendamento de clinica</h5>
+                  <h5 class="card-title">LANDINGPAGE VOLTADA A AGENDAMENTO DE CLINICA</h5>
                   <a href="https://ramonchuinca.github.io/trabalho_faculdade_land_page-/" class="btn btn-primary" target="_blank">Ver Projeto</a>
                 </div>
               </div>
             </div>
             <!-- Novo Card -->
             <div class="col-lg-4 mb-4">
-              <div class="card">
+              <div class="card-custom">
                 <img src="./img/OIP.jfif" class="card-img-top" alt="Imagem do Novo Projeto">
                 <div class="card-body">
-                  <h5 class="card-title">Projeto Sobre o Tema da Natureza</h5>
+                  <h5 class="card-title">PROJETO SOBRE UM TEMA VOLTADO A NATUREZA</h5>
                   <a href="https://ramonchuinca.github.io/Tema-Natureza/" class="btn btn-primary" target="_blank">Ver Projeto</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-4 mb-4">
-              <div class="card">
-                <img src="./img/react_logo_2.png" class="card-img-top" alt="Imagem do Novo Projeto">
+              <div class="card-custom">
+                <img src="./img/react-logo-3.png" class="card-img-top" alt="Imagem do Novo Projeto">
                 <div class="card-body">
                   <h5 class="card-title">QUIZ-REACT DE PROGRAMAÇÃO</h5>
                   <a href="https://quiz-react-htm-css-javascript.netlify.app/" class="btn btn-primary" target="_blank">Ver Projeto</a>
@@ -138,22 +138,22 @@
           </svg>
         </button>
         <button type="button">
-          <span>About</span>
+          <span>Sobre</span>
           <span class="material-symbols-outlined" aria-hidden="true">info</span>
           <svg viewBox="0 0 300 300" aria-hidden="true">
             <g>
               <text fill="currentColor">
-                <textPath xlink:href="#circlePath">About</textPath>
+                <textPath xlink:href="#circlePath">Sobre</textPath>
               </text>
               <text fill="currentColor">
-                <textPath xlink:href="#circlePath" startOffset="50%">About</textPath>
+                <textPath xlink:href="#circlePath" startOffset="50%">Sobre</textPath>
               </text>
             </g>
           </svg>
         </button>
         <button type="button">
           <span>Services</span>
-          <span class="material-symbols-outlined" aria-hidden="true">linked_services</span>
+          <span class="material-symbols-outlined" aria-hidden="true">Projetos</span>
           <svg viewBox="0 0 300 300" aria-hidden="true">
             <g>
               <text fill="currentColor">
@@ -166,15 +166,15 @@
           </svg>
         </button>
         <button type="button">
-          <span>Contact</span>
-          <span class="material-symbols-outlined" aria-hidden="true">email</span>
+          <span>Contato</span>
+          <span class="material-symbols-outlined" aria-hidden="true">sociais</span>
           <svg viewBox="0 0 300 300">
             <g>
               <text fill="currentColor" aria-hidden="true">
-                <textPath xlink:href="#circlePath">Contact</textPath>
+                <textPath xlink:href="#circlePath">Contato</textPath>
               </text>
               <text fill="currentColor">
-                <textPath xlink:href="#circlePath" startOffset="50%">Contact</textPath>
+                <textPath xlink:href="#circlePath" startOffset="50%">Contato</textPath>
               </text>
             </g>
           </svg>
