--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <!---NAVEGAÇÃO NAV FIM-->
 
       <!--CONTAINER BANNER-->
+      <div class="container-pai"> 
       <main class="caixa-principal">
       <div class="caixa" id="home">
         <div class="container">
@@ -54,6 +55,7 @@
         </div>
       </div>
     </main>
+  </div>
     <!--CONTAINER BANNER FIM-->
       
 
