--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <label for="mensagem" class="form-label">Mensagem</label>
           <textarea class="form-control" id="mensagem" name="message" rows="3" required></textarea>
         </div>
-        <input type="hidden" name="_next" value="http://chuinca-dev-junior.netlify.app//thanks.html">
+        <input type="hidden" name="_next" value="http://chuinca-dev-junior.netlify.app/thanks.html">
       
         <!-- Botão Enviar -->
         <button type="submit" class="btn btn-primary">Enviar</button>
