--- a/thanks.html
+++ b/thanks.html
@@ -1,13 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no" />
+  <link rel="stylesheet" href="./styles1.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+<title>PortFolio</title>
+</head>
+
 <body>
-    <div>
-        <h1> obrigado</h1>
+  <!---NAVEGAÇÃO NAV-->
+  <!-- <nav class="navbar navbar-expand-lg navbar-ligh fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand portfolio" href="#home">Portfo<span>lio</span></a>
+      <button class="navbar-toggler custom-toggler red-toggler " type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link link-menu" href="#home">Ho<span>me</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-menu" href="#sobre">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-menu" href="#projetos-id">Projetos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-menu" href="#fale-comigo">Fale comigo</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav> -->
+  <!---NAVEGAÇÃO NAV FIM-->
+  <!--CONTAINER BANNER-->
+  <section class="nav">
+    <div class="container">
+        <div class="row justify-content-center text-center align-items-center">
+            <div class="col-lg-6">
+                <img src="./img/101291937.png" class="img-fluid" alt="Foto Chuinca">
+            </div>
+        </div>
+        <h1>OBRIGADO PELO SEU CONTATO</h1>
+        <h3 class="span loader">
+            <span class="m">R</span>
+            <span class="m">E</span>
+            <span class="m">T</span>
+            <span class="m">O</span>
+            <span class="m">R</span>
+            <span class="m">N</span>
+            <span class="m">A</span>
+            <span class="m">R</span>
+            <span class="m">E</span>
+            <span class="m">I</span>
+            <span class="m">&nbsp;</span>
+            <span class="m">E</span>
+            <span class="m">M</span>
+            <span class="m">&nbsp;</span>
+            <br>
+            <span class="m">B</span>
+            <span class="m">R</span>
+            <span class="m">E</span>
+            <span class="m">V</span>
+            <span class="m">E</span>
+            <!-- <span class="m">O</span>
+            <span class="m">G</span>
+            <span class="m">I</span>
+            <span class="m">E</span>
+            <span class="m">S</span> -->
+        </h3>
+    </div>
+</section>
+  
+  
+  <!--CONTAINER BANNER FIM-->
+
+  <script src="./javascript/scripts1.js"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
+  <script src="https://smtpjs.com/v3/smtp.js">
+  </script>
+
+
+
+
+
+
 </body>
+
 </html>
