--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- <link rel="icon" type="image/svg+xml" href="/img/portfolio.jpg" /> -->
+     <link id="favicon" rel="icon" type="image/png" href="/img/fundo3.jpg">
+
+<script>
+  function changeFavicon(newIcon) {
+    const favicon = document.getElementById('favicon');
+    favicon.href = newIcon;
+  }
+
+  // Troca o favicon depois de 3 segundos
+  setTimeout(() => {
+    changeFavicon('/img/portfolio-dark.png');
+  }, 3000);
+</script>
+
 </head>
 <title>PortFolio</title>
 </head>
@@ -143,6 +158,8 @@
             </div>
           </div>
         </div>
+
+        
 
         <div class="col-lg-4 mb-4">
           <div class="card-custom">
